# bazel-rules-libuv

./: BUILD.bazel  README.md  WORKSPACE.bazel  repos.bzl
bazel/: deps.bzl  repos.bzl
