load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "libuv",
    visibility = ["//visibility:public"],
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "BUILD_SHARED_LIBS": "OFF",
        "LIBUV_BUILD_TESTS": "OFF",
        "LIBUV_BUILD_BENCH": "OFF",
    },
    lib_source = ":all",
    out_static_libs = select({
        "@bazel_tools//src/conditions:windows": [
            "Release/uv_a.lib",
        ],
        "//conditions:default": ["libuv_a.a"],
    }),
	linkopts = select({
        "@bazel_tools//src/conditions:windows": [ "WS2_32.Lib Advapi32.lib Iphlpapi.lib Userenv.lib User32.lib" ], # Windows
        "@bazel_tools//src/conditions:darwin": [], # macOS
        "//conditions:default": ["-ldl"], # Linux
    }),
)
